# eink-picture-frame-webapp

./: .env.example  .gitignore  README.md  image_database.db  pyproject.toml
setup_files/: pictureframe.service
src/static/css/: main.css
src/static/js/: constants.js  main.js
src/static/js/components/: image-list.js  image-utils.js  modal.js  upload-image.js
src/static/js/pages/: base.js  home.js  login.js
src/static/js/utils/: api.js  messages.js
src/web/: auth.py  constants.py  display.py  logger.py  main.py  models.py  sql.py  utils.py
src/web/template/: base.html  home.html  login.html
src/web/template/partial/: image_list.html  pagination.html  storage_space.html
src/web/templates/: test.html
