[project]
name = "web"
version = "0.1.0"
description = "A simple web UI for an e-ink picture frame"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.3",
    "inky>=2.2.1 ; sys_platform == 'linux'",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "rpi-gpio>=0.7.1 ; sys_platform == 'linux'",
    "spidev>=3.8 ; sys_platform == 'linux'",
]

[project.scripts]
dev = "web.main:dev"
serve = "web.main:serve"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
